@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-11-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+    * libraries/display_tbl.lib.php:
+      bug #985399 MIME-based in print view / need to select the pk
+      
 2005-11-06 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/norwegian: Update, thanks to Sven-Erik Andersen
 
